tests/snapshots/cli_regression__color_mode_palette.snap
---
source: tests/cli_regression.rs
expression: stats
---
cell: artwork
  polygons: 12
  layers: [71/20, 72/20]
  bbox: (0, 0) to (25600, 25600)
