tests/snapshots/cli_regression__merge_with_offset.snap
---
source: tests/cli_regression.rs
expression: stats
---
cell: top_cell
  polygons: 9
  layers: [1/0, 72/20]
  bbox: (0, 0) to (100000, 100000)
