tests/snapshots/cli_regression__separated_mode.snap
---
source: tests/cli_regression.rs
expression: stats
---
cell: artwork
  polygons: 8
  layers: [72/20]
  bbox: (0, 0) to (49600, 49600)
