tests/snapshots/cli_regression__snapshot_generate_gds_asap7.snap
---
source: tests/cli_regression.rs
expression: stats
---
cell: artwork
  polygons: 8
  layers: [90/0]
  bbox: (0, 0) to (640, 640)
