tests/snapshots/cli_regression__snapshot_generate_gds_fabbula2.snap
---
source: tests/cli_regression.rs
expression: stats
---
cell: artwork
  polygons: 8
  layers: [150/0]
  bbox: (0, 0) to (12800, 12800)
