tests/snapshots/cli_regression__snapshot_generate_gds_freepdk45.snap
---
source: tests/cli_regression.rs
expression: stats
---
cell: artwork
  polygons: 8
  layers: [29/0]
  bbox: (0, 0) to (14400, 14400)
