tests/snapshots/cli_regression__snapshot_generate_gds_gf180mcu.snap
---
source: tests/cli_regression.rs
expression: stats
---
cell: artwork
  polygons: 8
  layers: [81/0]
  bbox: (0, 0) to (7360, 7360)
