tests/snapshots/cli_regression__snapshot_generate_gds_ihp_sg13g2.snap
---
source: tests/cli_regression.rs
expression: stats
---
cell: artwork
  polygons: 8
  layers: [134/0]
  bbox: (0, 0) to (28800, 28800)
