tests/snapshots/cli_regression__snapshot_generate_gds_sky130.snap
---
source: tests/cli_regression.rs
expression: stats
---
cell: artwork
  polygons: 8
  layers: [72/20]
  bbox: (0, 0) to (25600, 25600)
